parser.output
Grammar

    0 $accept: Program $end

    1 Program: Procedure Procedures
    2        | ε

    3 Procedures: ε
    4           | Procedure Procedures

    5 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body RBRACE

    6 ParamList: ε
    7          | Param
    8          | ParamList SEMICOLON Param

    9 Param: IDList COLON Type

   10 IDList: IDENTIFIER
   11       | IDENTIFIER COMMA IDList

   12 Body: Procedures Declarations Statements Return

   13 Return: RETURN Expression SEMICOLON

   14 Declarations: ε
   15             | Declaration Declarations

   16 Declaration: VAR IDList COLON Type SEMICOLON
   17            | VAR IDList COLON STRING LBRACKET INT_LITERAL RBRACKET SEMICOLON

   18 Statements: ε
   19           | Statement Statements

   20 Statement: LHS EQUAL Expression SEMICOLON
   21          | LHS EQUAL STRING_LITERAL SEMICOLON
   22          | LHS EQUAL IDENTIFIER LPAREN ExpressionListOpt RPAREN SEMICOLON
   23          | IF LPAREN Expression RPAREN Block
   24          | IF LPAREN Expression RPAREN Block ELSE Block
   25          | WHILE LPAREN Expression RPAREN Block
   26          | Block

   27 LHS: IDENTIFIER
   28    | IDENTIFIER LBRACKET Expression RBRACKET
   29    | DEREFERENCE IDENTIFIER

   30 ExpressionListOpt: ε
   31                  | ExpressionList

   32 ExpressionList: Expression COMMA ExpressionList
   33               | Expression

   34 Expression: LPAREN Expression RPAREN
   35           | BAR Expression BAR
   36           | AMP LHS
   37           | Expression AND Expression
   38           | Expression DIV Expression
   39           | Expression EQUALS Expression
   40           | Expression GT Expression
   41           | Expression GTE Expression
   42           | Expression LT Expression
   43           | Expression LTE Expression
   44           | Expression MINUS Expression
   45           | Expression NOTEQUAL Expression
   46           | Expression OR Expression
   47           | Expression PLUS Expression
   48           | Expression MUL Expression
   49           | NOT Expression
   50           | MINUS Expression
   51           | IDENTIFIER
   52           | IDENTIFIER LBRACKET Expression RBRACKET
   53           | INT_LITERAL
   54           | CHAR_LITERAL
   55           | BOOL_LITERAL
   56           | DEREFERENCE Expression
   57           | NULLTOKEN

   58 Type: BOOLEAN
   59     | CHAR
   60     | INTEGER
   61     | INTPTR
   62     | CHARPTR

   63 Block: LBRACE Declarations Statements RBRACE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <u_base_charptr> (258) 5 10 11 22 27 28 29 51 52
    INT_LITERAL <u_base_int> (259) 17 53
    CHAR_LITERAL <u_base_int> (260) 54
    BOOL_LITERAL <u_base_int> (261) 55
    STRING_LITERAL <u_base_charptr> (262) 21
    BOOLEAN (263) 58
    CHAR (264) 59
    INTEGER (265) 60
    STRING (266) 17
    INTPTR (267) 61
    CHARPTR (268) 62
    IF (269) 23 24
    ELSE (270) 24
    WHILE (271) 25
    VAR (272) 16 17
    PROCEDURE (273) 5
    RETURN (274) 5 13
    NULLTOKEN (275) 57
    AND (276) 37
    DIV (277) 38
    EQUAL (278) 20 21 22
    EQUALS (279) 39
    GT (280) 40
    GTE (281) 41
    LT (282) 42
    LTE (283) 43
    MINUS (284) 44 50
    NOT (285) 49
    NOTEQUAL (286) 45
    OR (287) 46
    PLUS (288) 47
    MUL (289) 48
    AMP (290) 36
    DEREFERENCE (291) 29 56
    COMMA (292) 11 32
    COLON (293) 9 16 17
    LBRACE (294) 5 63
    RBRACE (295) 5 63
    SEMICOLON (296) 8 13 16 17 20 21 22
    LPAREN (297) 5 22 23 24 25 34
    RPAREN (298) 5 22 23 24 25 34
    BAR (299) 35
    LBRACKET (300) 17 28 52
    RBRACKET (301) 17 28 52


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    Program <u_program> (48)
        on left: 1 2
        on right: 0
    Procedures <u_proc_list> (49)
        on left: 3 4
        on right: 1 4 12
    Procedure <u_proc> (50)
        on left: 5
        on right: 1 4
    ParamList <u_decl_list> (51)
        on left: 6 7 8
        on right: 5 8
    Param <u_decl> (52)
        on left: 9
        on right: 7 8
    IDList <u_symname_list> (53)
        on left: 10 11
        on right: 9 11 16 17
    Body <u_procedure_block> (54)
        on left: 12
        on right: 5
    Return <u_return_stat> (55)
        on left: 13
        on right: 12
    Declarations <u_decl_list> (56)
        on left: 14 15
        on right: 12 15 63
    Declaration <u_decl> (57)
        on left: 16 17
        on right: 15
    Statements <u_stat_list> (58)
        on left: 18 19
        on right: 12 19 63
    Statement <u_stat> (59)
        on left: 20 21 22 23 24 25 26
        on right: 19
    LHS <u_lhs> (60)
        on left: 27 28 29
        on right: 20 21 22 36
    ExpressionListOpt <u_expr_list> (61)
        on left: 30 31
        on right: 22
    ExpressionList <u_expr_list> (62)
        on left: 32 33
        on right: 31 32
    Expression <u_expr> (63)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 13 20 23 24 25 28 32 33 34 35 37 38 39 40 41 42 43 44 45 46 47 48 49 50 52 56
    Type <u_type> (64)
        on left: 58 59 60 61 62
        on right: 5 9 16
    Block <u_nested_block> (65)
        on left: 63
        on right: 23 24 25 26


State 0

    0 $accept: • Program $end

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 2 (Program)

    Program    go to state 2
    Procedure  go to state 3


State 1

    5 Procedure: PROCEDURE • IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body RBRACE

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 5


State 3

    1 Program: Procedure • Procedures

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 3 (Procedures)

    Procedures  go to state 6
    Procedure   go to state 7


State 4

    5 Procedure: PROCEDURE IDENTIFIER • LPAREN ParamList RPAREN RETURN Type LBRACE Body RBRACE

    LPAREN  shift, and go to state 8


State 5

    0 $accept: Program $end •

    $default  accept


State 6

    1 Program: Procedure Procedures •

    $default  reduce using rule 1 (Program)


State 7

    4 Procedures: Procedure • Procedures

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 3 (Procedures)

    Procedures  go to state 9
    Procedure   go to state 7


State 8

    5 Procedure: PROCEDURE IDENTIFIER LPAREN • ParamList RPAREN RETURN Type LBRACE Body RBRACE

    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 6 (ParamList)

    ParamList  go to state 11
    Param      go to state 12
    IDList     go to state 13


State 9

    4 Procedures: Procedure Procedures •

    $default  reduce using rule 4 (Procedures)


State 10

   10 IDList: IDENTIFIER •
   11       | IDENTIFIER • COMMA IDList

    COMMA  shift, and go to state 14

    $default  reduce using rule 10 (IDList)


State 11

    5 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList • RPAREN RETURN Type LBRACE Body RBRACE
    8 ParamList: ParamList • SEMICOLON Param

    SEMICOLON  shift, and go to state 15
    RPAREN     shift, and go to state 16


State 12

    7 ParamList: Param •

    $default  reduce using rule 7 (ParamList)


State 13

    9 Param: IDList • COLON Type

    COLON  shift, and go to state 17


State 14

   11 IDList: IDENTIFIER COMMA • IDList

    IDENTIFIER  shift, and go to state 10

    IDList  go to state 18


State 15

    8 ParamList: ParamList SEMICOLON • Param

    IDENTIFIER  shift, and go to state 10

    Param   go to state 19
    IDList  go to state 13


State 16

    5 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN • RETURN Type LBRACE Body RBRACE

    RETURN  shift, and go to state 20


State 17

    9 Param: IDList COLON • Type

    BOOLEAN  shift, and go to state 21
    CHAR     shift, and go to state 22
    INTEGER  shift, and go to state 23
    INTPTR   shift, and go to state 24
    CHARPTR  shift, and go to state 25

    Type  go to state 26


State 18

   11 IDList: IDENTIFIER COMMA IDList •

    $default  reduce using rule 11 (IDList)


State 19

    8 ParamList: ParamList SEMICOLON Param •

    $default  reduce using rule 8 (ParamList)


State 20

    5 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN • Type LBRACE Body RBRACE

    BOOLEAN  shift, and go to state 21
    CHAR     shift, and go to state 22
    INTEGER  shift, and go to state 23
    INTPTR   shift, and go to state 24
    CHARPTR  shift, and go to state 25

    Type  go to state 27


State 21

   58 Type: BOOLEAN •

    $default  reduce using rule 58 (Type)


State 22

   59 Type: CHAR •

    $default  reduce using rule 59 (Type)


State 23

   60 Type: INTEGER •

    $default  reduce using rule 60 (Type)


State 24

   61 Type: INTPTR •

    $default  reduce using rule 61 (Type)


State 25

   62 Type: CHARPTR •

    $default  reduce using rule 62 (Type)


State 26

    9 Param: IDList COLON Type •

    $default  reduce using rule 9 (Param)


State 27

    5 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type • LBRACE Body RBRACE

    LBRACE  shift, and go to state 28


State 28

    5 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE • Body RBRACE

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 3 (Procedures)

    Procedures  go to state 29
    Procedure   go to state 7
    Body        go to state 30


State 29

   12 Body: Procedures • Declarations Statements Return

    VAR  shift, and go to state 31

    $default  reduce using rule 14 (Declarations)

    Declarations  go to state 32
    Declaration   go to state 33


State 30

    5 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body • RBRACE

    RBRACE  shift, and go to state 34


State 31

   16 Declaration: VAR • IDList COLON Type SEMICOLON
   17            | VAR • IDList COLON STRING LBRACKET INT_LITERAL RBRACKET SEMICOLON

    IDENTIFIER  shift, and go to state 10

    IDList  go to state 35


State 32

   12 Body: Procedures Declarations • Statements Return

    IDENTIFIER   shift, and go to state 36
    IF           shift, and go to state 37
    WHILE        shift, and go to state 38
    DEREFERENCE  shift, and go to state 39
    LBRACE       shift, and go to state 40

    $default  reduce using rule 18 (Statements)

    Statements  go to state 41
    Statement   go to state 42
    LHS         go to state 43
    Block       go to state 44


State 33

   15 Declarations: Declaration • Declarations

    VAR  shift, and go to state 31

    $default  reduce using rule 14 (Declarations)

    Declarations  go to state 45
    Declaration   go to state 33


State 34

    5 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body RBRACE •

    $default  reduce using rule 5 (Procedure)


State 35

   16 Declaration: VAR IDList • COLON Type SEMICOLON
   17            | VAR IDList • COLON STRING LBRACKET INT_LITERAL RBRACKET SEMICOLON

    COLON  shift, and go to state 46


State 36

   27 LHS: IDENTIFIER •
   28    | IDENTIFIER • LBRACKET Expression RBRACKET

    LBRACKET  shift, and go to state 47

    $default  reduce using rule 27 (LHS)


State 37

   23 Statement: IF • LPAREN Expression RPAREN Block
   24          | IF • LPAREN Expression RPAREN Block ELSE Block

    LPAREN  shift, and go to state 48


State 38

   25 Statement: WHILE • LPAREN Expression RPAREN Block

    LPAREN  shift, and go to state 49


State 39

   29 LHS: DEREFERENCE • IDENTIFIER

    IDENTIFIER  shift, and go to state 50


State 40

   63 Block: LBRACE • Declarations Statements RBRACE

    VAR  shift, and go to state 31

    $default  reduce using rule 14 (Declarations)

    Declarations  go to state 51
    Declaration   go to state 33


State 41

   12 Body: Procedures Declarations Statements • Return

    RETURN  shift, and go to state 52

    Return  go to state 53


State 42

   19 Statements: Statement • Statements

    IDENTIFIER   shift, and go to state 36
    IF           shift, and go to state 37
    WHILE        shift, and go to state 38
    DEREFERENCE  shift, and go to state 39
    LBRACE       shift, and go to state 40

    $default  reduce using rule 18 (Statements)

    Statements  go to state 54
    Statement   go to state 42
    LHS         go to state 43
    Block       go to state 44


State 43

   20 Statement: LHS • EQUAL Expression SEMICOLON
   21          | LHS • EQUAL STRING_LITERAL SEMICOLON
   22          | LHS • EQUAL IDENTIFIER LPAREN ExpressionListOpt RPAREN SEMICOLON

    EQUAL  shift, and go to state 55


State 44

   26 Statement: Block •

    $default  reduce using rule 26 (Statement)


State 45

   15 Declarations: Declaration Declarations •

    $default  reduce using rule 15 (Declarations)


State 46

   16 Declaration: VAR IDList COLON • Type SEMICOLON
   17            | VAR IDList COLON • STRING LBRACKET INT_LITERAL RBRACKET SEMICOLON

    BOOLEAN  shift, and go to state 21
    CHAR     shift, and go to state 22
    INTEGER  shift, and go to state 23
    STRING   shift, and go to state 56
    INTPTR   shift, and go to state 24
    CHARPTR  shift, and go to state 25

    Type  go to state 57


State 47

   28 LHS: IDENTIFIER LBRACKET • Expression RBRACKET

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 69


State 48

   23 Statement: IF LPAREN • Expression RPAREN Block
   24          | IF LPAREN • Expression RPAREN Block ELSE Block

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 70


State 49

   25 Statement: WHILE LPAREN • Expression RPAREN Block

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 71


State 50

   29 LHS: DEREFERENCE IDENTIFIER •

    $default  reduce using rule 29 (LHS)


State 51

   63 Block: LBRACE Declarations • Statements RBRACE

    IDENTIFIER   shift, and go to state 36
    IF           shift, and go to state 37
    WHILE        shift, and go to state 38
    DEREFERENCE  shift, and go to state 39
    LBRACE       shift, and go to state 40

    $default  reduce using rule 18 (Statements)

    Statements  go to state 72
    Statement   go to state 42
    LHS         go to state 43
    Block       go to state 44


State 52

   13 Return: RETURN • Expression SEMICOLON

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 73


State 53

   12 Body: Procedures Declarations Statements Return •

    $default  reduce using rule 12 (Body)


State 54

   19 Statements: Statement Statements •

    $default  reduce using rule 19 (Statements)


State 55

   20 Statement: LHS EQUAL • Expression SEMICOLON
   21          | LHS EQUAL • STRING_LITERAL SEMICOLON
   22          | LHS EQUAL • IDENTIFIER LPAREN ExpressionListOpt RPAREN SEMICOLON

    IDENTIFIER      shift, and go to state 74
    INT_LITERAL     shift, and go to state 59
    CHAR_LITERAL    shift, and go to state 60
    BOOL_LITERAL    shift, and go to state 61
    STRING_LITERAL  shift, and go to state 75
    NULLTOKEN       shift, and go to state 62
    MINUS           shift, and go to state 63
    NOT             shift, and go to state 64
    AMP             shift, and go to state 65
    DEREFERENCE     shift, and go to state 66
    LPAREN          shift, and go to state 67
    BAR             shift, and go to state 68

    Expression  go to state 76


State 56

   17 Declaration: VAR IDList COLON STRING • LBRACKET INT_LITERAL RBRACKET SEMICOLON

    LBRACKET  shift, and go to state 77


State 57

   16 Declaration: VAR IDList COLON Type • SEMICOLON

    SEMICOLON  shift, and go to state 78


State 58

   51 Expression: IDENTIFIER •
   52           | IDENTIFIER • LBRACKET Expression RBRACKET

    LBRACKET  shift, and go to state 79

    $default  reduce using rule 51 (Expression)


State 59

   53 Expression: INT_LITERAL •

    $default  reduce using rule 53 (Expression)


State 60

   54 Expression: CHAR_LITERAL •

    $default  reduce using rule 54 (Expression)


State 61

   55 Expression: BOOL_LITERAL •

    $default  reduce using rule 55 (Expression)


State 62

   57 Expression: NULLTOKEN •

    $default  reduce using rule 57 (Expression)


State 63

   50 Expression: MINUS • Expression

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 80


State 64

   49 Expression: NOT • Expression

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 81


State 65

   36 Expression: AMP • LHS

    IDENTIFIER   shift, and go to state 36
    DEREFERENCE  shift, and go to state 39

    LHS  go to state 82


State 66

   56 Expression: DEREFERENCE • Expression

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 83


State 67

   34 Expression: LPAREN • Expression RPAREN

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 84


State 68

   35 Expression: BAR • Expression BAR

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 85


State 69

   28 LHS: IDENTIFIER LBRACKET Expression • RBRACKET
   37 Expression: Expression • AND Expression
   38           | Expression • DIV Expression
   39           | Expression • EQUALS Expression
   40           | Expression • GT Expression
   41           | Expression • GTE Expression
   42           | Expression • LT Expression
   43           | Expression • LTE Expression
   44           | Expression • MINUS Expression
   45           | Expression • NOTEQUAL Expression
   46           | Expression • OR Expression
   47           | Expression • PLUS Expression
   48           | Expression • MUL Expression

    AND       shift, and go to state 86
    DIV       shift, and go to state 87
    EQUALS    shift, and go to state 88
    GT        shift, and go to state 89
    GTE       shift, and go to state 90
    LT        shift, and go to state 91
    LTE       shift, and go to state 92
    MINUS     shift, and go to state 93
    NOTEQUAL  shift, and go to state 94
    OR        shift, and go to state 95
    PLUS      shift, and go to state 96
    MUL       shift, and go to state 97
    RBRACKET  shift, and go to state 98


State 70

   23 Statement: IF LPAREN Expression • RPAREN Block
   24          | IF LPAREN Expression • RPAREN Block ELSE Block
   37 Expression: Expression • AND Expression
   38           | Expression • DIV Expression
   39           | Expression • EQUALS Expression
   40           | Expression • GT Expression
   41           | Expression • GTE Expression
   42           | Expression • LT Expression
   43           | Expression • LTE Expression
   44           | Expression • MINUS Expression
   45           | Expression • NOTEQUAL Expression
   46           | Expression • OR Expression
   47           | Expression • PLUS Expression
   48           | Expression • MUL Expression

    AND       shift, and go to state 86
    DIV       shift, and go to state 87
    EQUALS    shift, and go to state 88
    GT        shift, and go to state 89
    GTE       shift, and go to state 90
    LT        shift, and go to state 91
    LTE       shift, and go to state 92
    MINUS     shift, and go to state 93
    NOTEQUAL  shift, and go to state 94
    OR        shift, and go to state 95
    PLUS      shift, and go to state 96
    MUL       shift, and go to state 97
    RPAREN    shift, and go to state 99


State 71

   25 Statement: WHILE LPAREN Expression • RPAREN Block
   37 Expression: Expression • AND Expression
   38           | Expression • DIV Expression
   39           | Expression • EQUALS Expression
   40           | Expression • GT Expression
   41           | Expression • GTE Expression
   42           | Expression • LT Expression
   43           | Expression • LTE Expression
   44           | Expression • MINUS Expression
   45           | Expression • NOTEQUAL Expression
   46           | Expression • OR Expression
   47           | Expression • PLUS Expression
   48           | Expression • MUL Expression

    AND       shift, and go to state 86
    DIV       shift, and go to state 87
    EQUALS    shift, and go to state 88
    GT        shift, and go to state 89
    GTE       shift, and go to state 90
    LT        shift, and go to state 91
    LTE       shift, and go to state 92
    MINUS     shift, and go to state 93
    NOTEQUAL  shift, and go to state 94
    OR        shift, and go to state 95
    PLUS      shift, and go to state 96
    MUL       shift, and go to state 97
    RPAREN    shift, and go to state 100


State 72

   63 Block: LBRACE Declarations Statements • RBRACE

    RBRACE  shift, and go to state 101


State 73

   13 Return: RETURN Expression • SEMICOLON
   37 Expression: Expression • AND Expression
   38           | Expression • DIV Expression
   39           | Expression • EQUALS Expression
   40           | Expression • GT Expression
   41           | Expression • GTE Expression
   42           | Expression • LT Expression
   43           | Expression • LTE Expression
   44           | Expression • MINUS Expression
   45           | Expression • NOTEQUAL Expression
   46           | Expression • OR Expression
   47           | Expression • PLUS Expression
   48           | Expression • MUL Expression

    AND        shift, and go to state 86
    DIV        shift, and go to state 87
    EQUALS     shift, and go to state 88
    GT         shift, and go to state 89
    GTE        shift, and go to state 90
    LT         shift, and go to state 91
    LTE        shift, and go to state 92
    MINUS      shift, and go to state 93
    NOTEQUAL   shift, and go to state 94
    OR         shift, and go to state 95
    PLUS       shift, and go to state 96
    MUL        shift, and go to state 97
    SEMICOLON  shift, and go to state 102


State 74

   22 Statement: LHS EQUAL IDENTIFIER • LPAREN ExpressionListOpt RPAREN SEMICOLON
   51 Expression: IDENTIFIER •
   52           | IDENTIFIER • LBRACKET Expression RBRACKET

    LPAREN    shift, and go to state 103
    LBRACKET  shift, and go to state 79

    $default  reduce using rule 51 (Expression)


State 75

   21 Statement: LHS EQUAL STRING_LITERAL • SEMICOLON

    SEMICOLON  shift, and go to state 104


State 76
